Capitalize 'Modules', 'Class' or 'Course' and 'Students' in sidebar (bug 2802); also fixed some alignment issues in library page

--- a/Zbang.Cloudents.Mvc4WebRole/Content/DashLib.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/DashLib.less
@@ -22,7 +22,8 @@
     vertical-align: top;
 
     .contentWpr {
-        padding-top: 105px;
+        //padding-top: 105px;
+        padding-top: 80px;
     }
 
     header {
@@ -34,6 +35,9 @@
         background-color: #f5f5f5;
         border: 1px solid #fff;
         box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    }
+    .boxesHeader .topLevel.topLevel {
+        padding: 7px 0 0;//override
     }
 }
 
