--- a/Zbang.Cloudents.Mvc4WebRole/Content/RTL3.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/RTL3.less
@@ -642,6 +642,12 @@
     }
 }
 
+.libTop {
+    .uniLogo {
+        margin: 0 8px 0 0; //rtl
+    }
+}
+
 .outbound {
     border-left: 1px solid @borderColor; /*rtl*/
     border-right: none;
