--- a/Zbang.Cloudents.Mvc4WebRole/Content/Sidebar.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Sidebar.less
@@ -460,6 +460,7 @@
     .stat {
         display: block;
         font-size: 14px;
+        text-transform: capitalize;
     }
 }
 
@@ -501,6 +502,9 @@
         background: #f1f1f1;
         position: relative;
         top: -9px;
+    }
+    .uniLogo {
+        margin-left: 8px; //rtl
     }
 }
 
